Format source files with spotless:apply